--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install ruff
         pip install -r requirements.txt
+        
+    - name: Lint with Ruff
+      run: |
+        ruff check .
         
     - name: Run automated tests
       run: |
